--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <link rel="stylesheet" type="text/css" href="/styles.css" />
+  <link rel="stylesheet" type="text/css" href="/assets/styles.css" />
   <title>Aleksander Gorecki - Portfolio</title>
 </head>
 
 <body>
   <div id="app"></div>
-  <script src="/bundle.js"></script>
+  <script src="/assets/bundle.js"></script>
 </body>
 
 </html>
